# SuperDuperWeatherStation

./: .env  .gitignore  README.md  Server.Dockerfile  docker-compose.yml
.github/workflows/: ubuntu.yml  windows.yml
client/: client.ino
frontend/: Cargo.toml
frontend/src/: core.rs  datetime.rs  gui.rs  main.rs  requests.rs  util.rs
server/: go.mod  main.go
server/core/: application.go  data_structure.go
server/database/: handlers.go  mongo-init.js
server/web/: handlers.go  routes.go
