[package]
name = "sdwd_frontend"
version = "0.1.0"
edition = "2021"
authors = ["Zvonimir Pervan <z.pervan65@gmail.com>"]

[dependencies]
spdlog-rs = "0.3"
lens-rs = "0.3"
druid = { version = "0.8", features = ["im"] }
druid-widget-nursery = { git = "https://github.com/linebender/druid-widget-nursery" }
gdk-sys = "0.16.0"
openssl-sys = "0.9.8"
plotters-druid = "0.3.0"
plotters = "^0.3"
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = "^1.0"
chrono = "0.4"